Refactor: make it simple